Change same height

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,7 +11,7 @@
             <h3>読んだ本を記録することができます。</h3>
             <h4><%= link_to "記録する",search_books_path,method: :get%></h4>
         </div>
-        <div class="col-md-6 bg-info">
+        <div class="col-md-6 bg-info ppad">
             <h1>面白い本を見つける</h1>
             <h3>性別、年齢別、に分けられたランキングを見れば面白い本を見つけられます。</h3>
              <h4><%= link_to "ランキングを見る",ranking_books_path,method: :get%></h4>
