--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,9 +5,9 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-
+<!--
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+ -->
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -75,7 +75,7 @@
 
   </style>
 </head>
-<body >
+<body>
 <header>
   <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
@@ -91,7 +91,7 @@
         <ul class="nav navbar-nav">
         <% unless user_signed_in? %>
             <li class="dropdown">
-            <a href="/books/ranking" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">本のランキング<span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">本のランキング<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="/books/ranking">ランキング一覧</a></li>
               <li><a href="/books/ranking#g1">男性に評価がいいランキング</a></li>
@@ -117,7 +117,7 @@
             </li>
             <% else %>
          <li class="dropdown">
-            <a href="/books/ranking" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">本のランキング<span class="caret"></span></a>
+            <a href="/#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">本のランキング<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="/books/ranking">ランキング一覧</a></li>
               <li><a href="/books/ranking#g1">男性に評価がいいランキング</a></li>
