--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,12 +6,12 @@
 <div class="row">
 <div class="col-md-9">
     <div class="row">
-        <div class="col-md-6 bg-success padd" style="">
+        <div class="col-md-6 bg-success padd text-center" style="">
             <h1>読書を記録</h1>
             <h3>読んだ本を記録することができます。</h3>
             <h4><%= link_to "記録する",search_books_path,method: :get%></h4>
         </div>
-        <div class="col-md-6 bg-info ppad">
+        <div class="col-md-6 bg-info ppad text-center">
             <h1>面白い本を見つける</h1>
             <h3>性別、年齢別、に分けられたランキングを見れば面白い本を見つけられます。</h3>
              <h4><%= link_to "ランキングを見る",ranking_books_path,method: :get%></h4>
