--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -117,7 +117,7 @@
             </li>
             <% else %>
          <li class="dropdown">
-            <a href="/#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">本のランキング<span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">本のランキング<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="/books/ranking">ランキング一覧</a></li>
               <li><a href="/books/ranking#g1">男性に評価がいいランキング</a></li>
