--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
     <div class='log-in-inner'>
       <h2>会員登録</h2>
 
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= form_for(resource, as: resource_name, url: {action: "confirm"}) do |f| %>
         <%= devise_error_messages! %>
         <div class='form-group'>
           <%= f.label :ユーザーネーム %><br />
