--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -113,6 +113,9 @@
               <%= link_to "記録する",search_books_path,method: :get%>
             </li>
             <li >
+              <%= link_to "会員登録",new_user_registration_path,method: :delete %>
+            </li>
+            <li >
               <%= link_to "ログイン", new_user_session_path,method: :get %>
             </li>
             <% else %>
