--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -3,6 +3,7 @@
 </h1>
   <%= form_for [@book], html:{class: 'form'} do |f| %>
     <p>タイトル：<%= f.text_field :title, html:{class: 'form-control'} %></p>
+    <p>作者：<%= f.text_field :writer, html:{class: 'form-control'} %></p>
     <p><%= button_tag "送信", type: "submit", class: "btn btn-defaults"%></p>
 
   <% end %>
