--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,8 +2,9 @@
   <div class='log-up'>
 
     <div class='log-in-inner'>
-      <h2>会員登録</h2>
-
+     <div class="container"> <h2>会員登録</h2>
+      <p>googleで</p>
+      <%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path %>
       <%= form_for(resource, as: resource_name, url: {action: "confirm"}) do |f| %>
         <%= devise_error_messages! %>
         <div class='form-group'>
@@ -34,6 +35,7 @@
       <% end %>
 
       <%= render 'devise/shared/links' %>
+      </div>
     </div>
   </div>
 </div>
