--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -20,6 +20,6 @@
 
 <% if devise_mapping.omniauthable? %>
   <% resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to 'Sign in with #{provider.to_s.titleize}', omniauth_authorize_path(resource_name, provider) %><br />
-  <% end %>
+
+ <%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path %><% end %>
 <% end %>
