--- a/app/views/books/ranking.html.erb
+++ b/app/views/books/ranking.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="panel panel-default">
   <!-- Default panel contents -->
   <div class="panel-heading"><h1 class="panel-title">ランキング一覧</h1></div>
@@ -26,8 +27,7 @@
 <% if @rates.present? %>
 <% @rates.each do |book| %>
       <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
+      <div class="col-md-12">
       <div class="panel panel-info ">
       <% rank += 1 %>
       <%@book = Book.find(book[:id]) %>
@@ -63,7 +63,6 @@
       </div> <!-- class="panel-body" -->
     </div><!--  .panel -->
     </div> <!-- col-md-1 -->
-    <div class="col-md-1"></div>
      </div> <!-- row -->
     <% end %>
     <% else %>
@@ -76,8 +75,7 @@
 <% if @rates2.present? %>
 <% @rates2.each do |book| %>
       <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
+      <div class="col-md-12">
       <div class="panel panel-info ">
       <% rank += 1 %>
       <%@book = Book.find(book[:id]) %>
@@ -113,7 +111,6 @@
       </div> <!-- class="panel-body" -->
     </div><!--  .panel -->
     </div> <!-- col-md-1 -->
-    <div class="col-md-1"></div>
      </div> <!-- row -->
     <% end %>
     <% else %>
@@ -128,8 +125,8 @@
 <% if @rates_age.present? %>
 <% @rates_age.each do |book| %>
       <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
+
+      <div class="col-md-12">
       <div class="panel panel-info ">
       <% rank += 1 %>
       <%@book = Book.find(book[:id]) %>
@@ -165,7 +162,7 @@
       </div> <!-- class="panel-body" -->
     </div><!--  .panel -->
     </div> <!-- col-md-1 -->
-    <div class="col-md-1"></div>
+
      </div> <!-- row -->
     <% end %>
     <% else %>
@@ -178,8 +175,8 @@
 <% if @rates_age2.present? %>
 <% @rates_age2.each do |book| %>
       <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
+
+      <div class="col-md-12">
       <div class="panel panel-info ">
       <% rank += 1 %>
       <%@book = Book.find(book[:id]) %>
@@ -215,7 +212,7 @@
       </div> <!-- class="panel-body" -->
     </div><!--  .panel -->
     </div> <!-- col-md-1 -->
-    <div class="col-md-1"></div>
+
      </div> <!-- row -->
     <% end %>
     <% else %>
@@ -230,8 +227,8 @@
 <% if @rates_age3.present? %>
 <% @rates_age3.each do |book| %>
       <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
+
+      <div class="col-md-12">
       <div class="panel panel-info ">
       <% rank += 1 %>
        <%@book = Book.find(book[:id]) %>
@@ -267,7 +264,7 @@
       </div> <!-- class="panel-body" -->
     </div><!--  .panel -->
     </div> <!-- col-md-1 -->
-    <div class="col-md-1"></div>
+
      </div> <!-- row -->
     <% end %>
     <% else %>
@@ -280,8 +277,8 @@
 <% if @rates_age4.present? %>
 <% @rates_age4.each do |book| %>
       <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
+
+      <div class="col-md-12">
       <div class="panel panel-info ">
       <% rank += 1 %>
       <%@book = Book.find(book[:id]) %>
@@ -317,7 +314,7 @@
       </div> <!-- class="panel-body" -->
     </div><!--  .panel -->
     </div> <!-- col-md-1 -->
-    <div class="col-md-1"></div>
+
      </div> <!-- row -->
     <% end %>
     <% else %>
@@ -333,8 +330,8 @@
 <% if @rates_age5.present? %>
 <% @rates_age5.each do |book| %>
       <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
+
+      <div class="col-md-12">
       <div class="panel panel-info ">
       <% rank += 1 %>
       <%@book = Book.find(book[:id]) %>
@@ -370,7 +367,7 @@
       </div> <!-- class="panel-body" -->
     </div><!--  .panel -->
     </div> <!-- col-md-1 -->
-    <div class="col-md-1"></div>
+
      </div> <!-- row -->
     <% end %>
     <% else %>
@@ -382,8 +379,8 @@
 <% if @rates_age6.present? %>
 <% @rates_age6.each do |book| %>
       <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
+
+      <div class="col-md-12">
       <div class="panel panel-info ">
       <% rank += 1 %>
       <%@book = Book.find(book[:id]) %>
@@ -419,7 +416,7 @@
       </div> <!-- class="panel-body" -->
     </div><!--  .panel -->
     </div> <!-- col-md-1 -->
-    <div class="col-md-1"></div>
+
      </div> <!-- row -->
     <% end %>
     <% else %>
@@ -432,8 +429,8 @@
 <% if @rates_age7.present? %>
 <% @rates_age7.each do |book| %>
       <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
+
+      <div class="col-md-12">
       <div class="panel panel-info ">
       <% rank += 1 %>
       <%@book = Book.find(book[:id]) %>
@@ -469,7 +466,7 @@
       </div> <!-- class="panel-body" -->
     </div><!--  .panel -->
     </div> <!-- col-md-1 -->
-    <div class="col-md-1"></div>
+
      </div> <!-- row -->
     <% end %>
     <% else %>
@@ -483,8 +480,8 @@
 <% if @rates_age8.present? %>
 <% @rates_age8.each do |book| %>
       <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
+
+      <div class="col-md-12">
       <div class="panel panel-info ">
       <% rank += 1 %>
       <%@book = Book.find(book[:id]) %>
@@ -520,7 +517,7 @@
       </div> <!-- class="panel-body" -->
     </div><!--  .panel -->
     </div> <!-- col-md-1 -->
-    <div class="col-md-1"></div>
+
      </div> <!-- row -->
     <% end %>
     <% else %>
@@ -533,8 +530,8 @@
 <% if @rates_age9.present? %>
 <% @rates_age9.each do |book| %>
       <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
+
+      <div class="col-md-12">
       <div class="panel panel-info ">
       <% rank += 1 %>
       <%@book = Book.find(book[:id]) %>
@@ -570,7 +567,7 @@
       </div> <!-- class="panel-body" -->
     </div><!--  .panel -->
     </div> <!-- col-md-1 -->
-    <div class="col-md-1"></div>
+
      </div> <!-- row -->
     <% end %>
     <% else %>
@@ -582,8 +579,8 @@
 <% if @rates_age10.present? %>
 <% @rates_age10.each do |book| %>
       <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
+
+      <div class="col-md-12">
       <div class="panel panel-info ">
       <% rank += 1 %>
       <%@book = Book.find(book[:id]) %>
@@ -619,7 +616,7 @@
       </div> <!-- class="panel-body" -->
     </div><!--  .panel -->
     </div> <!-- col-md-1 -->
-    <div class="col-md-1"></div>
+
      </div> <!-- row -->
     <% end %>
     <% else %>
@@ -631,8 +628,8 @@
 <% if @rates_age11.present? %>
 <% @rates_age11.each do |book| %>
       <div class="row">
-      <div class="col-md-1"></div>
-      <div class="col-md-10">
+
+      <div class="col-md-12">
       <div class="panel panel-info ">
       <% rank += 1 %>
       <%@book = Book.find(book[:id]) %>
@@ -668,9 +665,10 @@
       </div> <!-- class="panel-body" -->
     </div><!--  .panel -->
     </div> <!-- col-md-1 -->
-    <div class="col-md-1"></div>
+
      </div> <!-- row -->
     <% end %>
     <% else %>
     <h3 class="text-center">まだデータがありません</h3>
     <% end %>
+</div>
