--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BookApp</title>
+  <title>Lib-Log!</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -81,6 +81,12 @@
   .ppad{
   height:204px;
   }
+  .logo {
+  }
+  a.navbar-brand {
+    padding-top: 15px;
+  }
+
 
   </style>
 </head>
@@ -89,7 +95,7 @@
   <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <a href="/" class="navbar-brand">Book-App</a>
+        <a href="/" class="navbar-brand"><%= image_tag("logo_1.png",class: "logo",height:"50",style:"float:left;",alt:"Lib-Log!")%></a>
         <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
