--- a/app/views/user_details/create.html.erb
+++ b/app/views/user_details/create.html.erb
@@ -1,3 +1,5 @@
-<h1>設定完了です！</h1>
-<%= link_to "マイページへ",user_path(current_user.id),method: :get %>
+<div class="container">
+  <h1>設定完了です！</h1>
+  <%= link_to "マイページへ",user_path(current_user.id),method: :get %>
+</div>
 
