--- a/app/views/user_details/update.html.erb
+++ b/app/views/user_details/update.html.erb
@@ -1,3 +1,4 @@
-<h1>プロフィールを変更できました！</h1>
-<%= link_to "マイページへ",user_path(current_user.id),method: :get %>
-
+<div class="container">
+  <h1>プロフィールを変更できました！</h1>
+  <%= link_to "マイページへ",user_path(current_user.id),method: :get %>
+</div>
